Joseph Griffith ; css test ; 9/1/22

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Our Funky HTML Page</title>
     <meta name="description" content="Our first page">
     <meta name="keywords" content="html tutorial template">
+    <link rel="styles.css">
   </head>
   <body>
     Content goes here.
