--- a/python.html
+++ b/python.html
@@ -8,20 +8,14 @@
   <body>
     <div class="body-wrapper">
       <div class="title">
-        <h1>Welcome to my portfolio</h1>
+        <h1>My Python Projects</h1>
       </div>
       <div class="links-wrapper">
         <a href="index.html">Home</a>
         <a href="resume.html">Resume</a>
         <a href="python.html">Python Projects</a>
       </div>
-      <div class="aboutme-wrapper">
-        <h1>About me</h1>
-        <p>I am a filler text</p>
-      </div>
-      <div class="contact-wrapper">
-        <h1>Contact Me</h1>
-      </div>
+
       
       
     </div>
