--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 
       <div class="img-wrapper">
         <h1>Resume</h2>
-        <img src="images/Resume.png" alt="A photo of my resume" class="resume">
+        <img src="Resume.png" alt="A photo of my resume" class="resume">
       </div>
     </div>
   </body>
