Joseph Griffith ; Majority of filled in website upload ; 9/2/22

--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,9 @@
         <p>joe.griffith33@icloud.com</p>
       </div>
     </div>
-    <div class="body-wrapper-resume">
-      <img src="images/resume.png" alt="Image of code">
+    <div class="body-wrapper-projects">
+        <h1>Projects</h1>
+        <a href="python.html">Python</a>
     </div>
     <div class="footer-wrapper">
       <h1>Contact Me</h1>
