--- a/about.html
+++ b/about.html
@@ -25,8 +25,9 @@
         <p>joe.griffith33@icloud.com</p>
       </div>
     </div>
-    <div class="body-wrapper-resume">
-      <img src="images/resume.png" alt="Image of code">
+    <div class="body-wrapper-about">
+      <h1>About Me</h1>
+      <p>testddddddddddddd<br>dddddddddddddddddddddddddd</p>
     </div>
     <div class="footer-wrapper">
       <h1>Contact Me</h1>
