Joseph Griffith ; Adding first project ; 9/3/22

--- a/about.html
+++ b/about.html
@@ -27,7 +27,12 @@
     </div>
     <div class="body-wrapper-about">
       <h1>About Me</h1>
-      <p>testddddddddddddd<br>dddddddddddddddddddddddddd</p>
+      <p>Hi! My name is Joseph Griffith and I'm currently a senior in high school.
+          I love to code, program, and work with computers.
+           I've taken many programming and IT-related courses and am actively taking more,
+            such as Linux, Computer Systems, and Game Development.
+             I am also a memeber of a winning team of the NASA Techrise challenge.
+              I'm open to and looking for any opportunities to learn and develop my skills.</p>
     </div>
     <div class="footer-wrapper">
       <h1>Contact Me</h1>
