--- a/python.html
+++ b/python.html
@@ -25,8 +25,24 @@
         <p>joe.griffith33@icloud.com</p>
       </div>
     </div>
-    <div class="body-wrapper">
-      <img src="images/backgroundimg.jpg" alt="Image of code">
+    <div class="body-wrapper-python">
+        <div class="python-title">
+            <h1>Python Projects</h1>
+        </div>
+        <p>I did manage to host my projects on replit, however they are very laggy,
+             I had to adjust the screen sizes to make them fit, and they may just not work period.
+              I would absolutly recommend that you download the zip file next to each title
+               and run the executable if you want a better experience.
+                The game will be much smoother and all the settings will be as intended.
+            </p>
+        <div class="project-title">
+            <h1>Jumper</h1>
+            <a href="projects/jumper.zip" download>
+                <i class="fa-solid fa-download"></i>
+            </a>
+        </div>
+        <iframe frameborder="0" width="100%" height="500px" src="https://repl.it/@Ranger250/Jumper?outputonly=1&lite=true"></iframe>
+        <!-- <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@Ranger250/Jumper?embed=true"></iframe> -->
     </div>
     <div class="footer-wrapper">
       <h1>Contact Me</h1>
