--- a/python.html
+++ b/python.html
@@ -73,7 +73,7 @@
 
         <div class="project-title">
             <h1>Jumper</h1>
-            <a href="projects/jumper.zip" download>
+            <a href="Projects/jumper.zip" download>
                 <i class="fa-solid fa-download"></i>
             </a>
         </div>
