--- a/python.html
+++ b/python.html
@@ -29,12 +29,10 @@
         <div class="python-title">
             <h1>Python Projects</h1>
         </div>
-        <p>I did manage to host my projects on replit, however the graphical ones they are very laggy,
-             I had to adjust the screen sizes to make them fit, and they may just not work period.
-              I would absolutly recommend that you download the zip file next to each title
-               and run the executable if you want a better experience.
-                The game will be much smoother and all the settings will be as intended.
-                 The console based programs should work fairly well though.
+        <p>I did manage to host my projects on Replit, however, the graphical ones are very laggy,
+          I had to adjust the screen sizes to make them fit, and they may just not work period.
+          I would recommend that you download the zip file next to each title and run the executable if you want a better experience.
+          The game will be much smoother and all the settings will be as intended. The console-based programs should work fairly well though.
             </p>
 
         <div class="project-title">
