--- a/unity.html
+++ b/unity.html
@@ -1,1 +1,52 @@
-test
+<!doctype html>
+<html>
+  <head>
+    <title>Joseph Griffith's Portfolio</title>
+    <script src="https://kit.fontawesome.com/77b56d9e03.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <div class="header-wrapper">
+      <div class="header-wrapper-side">
+        <i class="fa-brands fa-square-github"></i>
+        <a href="https://github.com/Ranger250">GitHub</a>
+      </div>
+      <div class="header-wrapper-mid">
+        <h1>Joseph Griffith's Portfolio</h1>
+        <div class="links-wrapper">
+          <a href="index.html">Home</a>
+          <a href="resume.html">Resume</a>
+          <a href="about.html">About Me</a>
+          <a href="projects.html">Projects</a>
+        </div>
+      </div>
+      <div class="header-wrapper-side">
+        <i class="fa-solid fa-envelope"></i>
+        <p>joe.griffith33@icloud.com</p>
+      </div>
+    </div>
+    <div class="body-wrapper-python">
+        <div class="python-title">
+            <h1>Unity Projects</h1>
+        </div>
+        
+        <p>Project goes here</p>
+        
+    </div>
+    <div class="footer-wrapper">
+      <h1>Contact Me</h1>
+      <div class="contact-wrapper">
+        <div>
+          <i class="fa-solid fa-phone"></i>
+          <p>435-830-3613</p>
+        </div>
+        <div>
+          <i class="fa-solid fa-envelope"></i>
+          <p>joe.griffith33@icloud.com</p>
+        </div>
+      </div>
+    </div>
+
+ 
+  </body>
+</html>
