--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,7 @@
     <div class="body-wrapper-projects">
         <h1>Projects</h1>
         <a href="python.html">Python</a>
+        <a href ="unity.html">Unity</a>
     </div>
     <div class="footer-wrapper">
       <h1>Contact Me</h1>
