Joseph Griffith ; Adding jumper evolution replit ; 10/17/22

--- a/python.html
+++ b/python.html
@@ -77,6 +77,15 @@
         </div>
         <iframe frameborder="0" width="100%" height="500px" src="https://repl.it/@Ranger250/Jumper?outputonly=1&lite=true"></iframe>
 
+
+        <div class="project-title">
+          <h1>Jumper Machine Learning</h1>
+          <a href="Projects/jumper.zip" download>
+              <i class="fa-solid fa-download"></i>
+          </a>
+      </div>
+      <iframe frameborder="0" width="100%" height="500px" src="https://repl.it/@Ranger250/JumperEvolution?outputonly=1&lite=true"></iframe>
+
         
     </div>
     <div class="footer-wrapper">
