--- a/python.html
+++ b/python.html
@@ -1,3 +1,4 @@
+<!-- auto-py-to-exe -->
 <!doctype html>
 <html>
   <head>
@@ -80,7 +81,7 @@
 
         <div class="project-title">
           <h1>Jumper Machine Learning</h1>
-          <a href="Projects/jumper.zip" download>
+          <a href="Projects/jumperML.zip" download>
               <i class="fa-solid fa-download"></i>
           </a>
       </div>
