Joseph Griffith ; adding techrise link to about me page ; 10/18/22

--- a/about.html
+++ b/about.html
@@ -31,7 +31,8 @@
           I love to code, program, and work with computers.
            I've taken many programming and IT-related courses and am actively taking more,
             such as Linux, Computer Systems, and Game Development.
-             I am also a memeber of a winning team of the NASA Techrise challenge.
+             I am also a memeber of a winning team of the NASA Techrise challenge
+             <a href="http://tooeleonline.com/blue-peak-engineers-win-nasa-challenge/"><u>News Article Link</u></a>.
               I'm open to and looking for any opportunities to learn and develop my skills.</p>
     </div>
     <div class="footer-wrapper">
