--- a/python.html
+++ b/python.html
@@ -35,6 +35,10 @@
           I would recommend that you download the zip file next to each title and run the executable if you want a better experience.
           The game will be much smoother and all the settings will be as intended. The console-based programs should work fairly well though.
             </p>
+        <br>
+        <p>Please note that most of these projects were some of my first and are meant to show my progress and not my current skill.
+          If you would like to discuss some of my more complicated projects, most of which I am unable to host on this website, feel free to contact me.
+      </p>
 
         <div class="project-title">
             <h1>Alarm Clock</h1>
