--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         <h2>Techrise</h2>
         <div class="side-by-side">
           <img src="images/Techrise.png" alt="Techrise Img">
-          <p></p>
+          <p>I was part of a team of high schoolers that</p>
         </div>
       </div>
       
