--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       <div class="about-me-item">
         <h2>Techrise</h2>
         <div class="side-by-side">
-          <img src="images/Techrise.png" alt="Techrise Img">
+          <img src="images/Techrise.jpg" alt="Techrise Img">
           <p>I was part of a team of high schoolers that</p>
         </div>
       </div>
