--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
       <div class="about-me-item">
         <h2>HAPROS</h2>
         <div class="side-by-side">
-          <img src="" alt="HAPROS Img">
+          <img src="images/HAPROS.jpg" alt="HAPROS Img">
           <p></p>
         </div>
       </div>
@@ -55,7 +55,7 @@
       <div class="about-me-item">
         <h2>Quantum Computing</h2>
         <div class="side-by-side">
-          <img src="" alt="Quantum Computing Img">
+          <img src="images/Certificate.pdf" alt="Quantum Computing Img">
           <p></p>
         </div>
       </div>
@@ -63,7 +63,7 @@
       <div class="about-me-item">
         <h2>Mudbots</h2>
         <div class="side-by-side">
-          <img src="" alt="Mudbots Img">
+          <img src="images/Mudbots.avif" alt="Mudbots Img">
           <p></p>
         </div>
       </div>
