--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
       <div class="about-me-item">
         <h2>Quantum Computing</h2>
         <div class="side-by-side">
-          <img src="images/Certificate.pdf" alt="Quantum Computing Img">
+          <img src="images/Certificate-1.png" alt="Quantum Computing Img">
           <p>I had the opportunity to take a year long class on the subject of quantum computing.
             Sponsered by IBM and taught by Harvard professors, the course gave me the opportunity
               to make quantum-circuits and run them on real quantum computers.</p>
