--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="body-wrapper">
-      <img src="images/backgroundimg.jpg" alt="Image of code">
+      <img src="images/background2.png" alt="Background Img">
     </div>
     <div class="footer-wrapper">
       <h1>Contact Me</h1>
