--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
         <h1>Joseph Griffith's Portfolio</h1>
         <div class="links-wrapper">
           <a href="index.html">Home</a>
-          <a href="Resume1.html">Resume</a>
+          <a href="resume.html">Resume</a>
           <a href="about.html">About Me</a>
           <a href="projects.html">Projects</a>
         </div>
