--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="body-wrapper-resume">
-      <img src="images/resume.png" alt="Image of code">
+      <img src="images/Resume1.png" alt="Image of code">
     </div>
     <div class="footer-wrapper">
       <h1>Contact Me</h1>
